Add meals.db to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,5 @@ fabric.properties
 # Azure Toolkit for IntelliJ plugin
 # https://plugins.jetbrains.com/plugin/8053-azure-toolkit-for-intellij
 .idea/**/azureSettings.xml
+
+meals.db
